--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -72,6 +72,31 @@ table {
     color:white;
 }
 
+.navbar {
+    background-color: rgb(0, 0, 0, 0.6);
+    padding: 1.2rem 1rem;
+}
+
+.frontpage {
+    max-width: 1080px;
+    margin: auto;
+}
+
+/* navbar text */
+/* default */
+.navbar-light .navbar-nav .nav-link {
+    color: white;
+}
+
+/* current page */
+.navbar-light .navbar-nav .active>.nav-link {
+    color:rgb(155, 155, 155);
+}
+
+/* hover */
+.navbar-light .navbar-nav .nav-link:hover {
+    color:rgb(221, 221, 221);
+}
 
 /* I got help with both selectors below from stackoverflow, there was a lot of troubleshooting to get the dimmed background image to stay dimmed on the pages that scrolled*/
 .wrapper{
@@ -88,4 +113,4 @@ table {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 80%;
-    }
+}
