--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -78,6 +78,14 @@ table {
     color:white;
 }
 
+.menu-item {
+    margin: 1em 0em;
+}
+
+.menu-section {
+    margin: 50px 0px;
+}
+
 .navbar {
     background-color: rgb(0, 0, 0, 0.6);
     padding: 1.2rem 1rem;
@@ -108,6 +116,10 @@ table {
 /* hover */
 .navbar-light .navbar-nav .nav-link:hover {
     color:rgb(221, 221, 221);
+}
+
+.navbar-toggler {
+    background-color: white;
 }
 
 /* I got help with both selectors below from stackoverflow, there was a lot of troubleshooting to get the dimmed background image to stay dimmed on the pages that scrolled*/
