--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -78,12 +78,39 @@ table {
     color:white;
 }
 
+.menu-title {
+    margin: 1em 0em;
+}
+
 .menu-item {
     margin: 1em 0em;
 }
 
+.menu-content {
+    font-weight: 400;
+    font-size: 25px;
+}
+
+.menu-price {
+    margin: 0em 1em;
+    font-weight: 400;
+    background-color: rgb(187, 117, 85);
+    padding: 2px;
+    font-size: 18px;
+    border-radius: 20%;
+}
+
+.menu-ingredients {
+    font-weight: 100;
+    color: rgb(235, 235, 235);
+    margin-left: 1em;
+    font-size: 16px;
+}
+
 .menu-section {
+    padding: 1em 0em;
     margin: 50px 0px;
+    background-color: rgb(0, 0, 0, 0.3);
 }
 
 .navbar {
