--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -26,6 +26,8 @@ body{
 .form{
     padding-left: 10%;
     padding-right: 10%;
+    background-color: rgb(0, 0, 0, 0.3);
+    padding: 2em 2em;
 }
 a{
     text-decoration: none;
@@ -45,10 +47,16 @@ div{
 }
 .frontpage p{
     font-size: 150%;
-    margin: 3em 0em
 }
-.frontpage table {
-    margin: 3em 0em
+
+.frontpage > * {
+    margin: 1em 0em;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.table-title {
+    font-weight: bold;
 }
 
 td{
@@ -158,14 +166,7 @@ table {
        background-position: 50% 0;
        background-size: cover;
 }
-/* .form {
-    this was causing the form to display on top of everything
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 80%;
-} */
+
 .form {
     max-width: 1000px;
     margin: auto;
